--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -10,6 +10,7 @@ title: Home
 	{% include "blocks/_latest-post.html" %}
 	{% include "blocks/_testimonials.html" %}
 	{% include "blocks/_screenshots-gallery.html" %}
+	{% include "blocks/_streams.html" %}
 	{% include "blocks/_pricing.html" %}
 	{% include "blocks/_faq.html" %}
 	{% include "blocks/_home-cta.html" %}
